added tess for user models

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,26 @@
+# Pytest configuration for the project
 [pytest]
 
+# Use local development settings for tests
 DJANGO_SETTINGS_MODULE = apipro.settings.local
+
+# Define patterns to discover test files
 python_files = tests.py test_*.py *_tests.py
+
+# Specify directory containing test files (likely app code)
 testpaths = core_apps
+
+# Additional options for pytest
 addopts = -p no:warnings --strict-markers --no-migrations -reuse-db
 
+  # Suppress warnings during test execution
+  # -p no:warnings
+
+  # Enforce stricter handling of test markers
+  # --strict-markers
+
+  # Avoid database migrations before tests
+  # --no-migrations
+
+  # Reuse the same database instance across tests (faster)
+  # -reuse-db
